--- a/cao_anh_khoa/cao_anh_khoa.vcxproj
+++ b/cao_anh_khoa/cao_anh_khoa.vcxproj
@@ -127,7 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cao_anh_khoa.c" />
+    <ClCompile Include="main.c" />
+    <ClCompile Include="toan.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
