--- a/cao_anh_khoa/cao_anh_khoa.vcxproj.filters
+++ b/cao_anh_khoa/cao_anh_khoa.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="toan.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tinhtiendien.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
